k10/service_green.yaml
apiVersion: v1
kind: Service
metadata:
  name: satelite-control-deployment-g
spec:
  selector:
    app: satelite-control-deployment-g
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
